[tool.poetry]
name = "event_metrics"
version = "0.2.0"
description = "An embedded, event-time metric collection library"
readme = "README.md"
authors = ["simon-mo <xmo@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.5"
numpy = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-benchmark = "^3.2.2"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
